Updated file to accommodate CSS tweaks

--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
       <h2>Get In Touch!</h2>
       <h3>Want your website built/rebuilt? Have an idea for a collaboration?</h3>
       <p>I'd love to hear from you!</p>
-      <a href="mailto:alexjmyers1@gmail.com" class="myButton">CONTACT ME</a> 
+      <a href="mailto:alexjmyers1@gmail.com" class="myButton">CONTACT ME</a>
     </div>
   </div>
 
   <div class="bottom-container">
-    <h3><a class="footer-link" href="https://www.linkedin.com/in/alex-myers-12776b177/">LinkedIn</a> <a class="footer-link" href="https://github.com/I3aptism/">Github</a> <a class="footer-link" href="https://www.instagram.com/alricsm/">Instagram</a></h3>
-    <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
-    <p>© 2020 Alexander Myers.</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/alex-myers-12776b177/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/I3aptism/">Github</a>
+    <a class="footer-link" href="https://www.instagram.com/alricsm/">Instagram</a>
+    <p class="credit">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+    <p class="copyright">© 2020 Alexander Myers.</p>
   </div>
 
 </body>
